# read-english-everyday

./: .env.example  .gitignore  README.md  dedup.py  main.py  pyproject.toml  sent_urls.txt  skills-lock.json
.github/workflows/: english_bot.yml  workout_bot.yml
english_bot/: curator.py  dedup.py  feeds.py  main.py  notifier.py  topic_rotation.py
shared/: __init__.py  zalo.py
tests/: test_curator.py  test_dedup.py  test_feeds.py  test_notifier.py  test_topic_rotation.py  test_zalo.py
workout_bot/: __init__.py  main.py
