[project]
name = "zalo-bot"
version = "0.1.0"
description = "Daily English Learning Bot for Vietnamese Children via Zalo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "requests>=2.31.0",
    "google-genai>=0.1.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
